updated header for 640px and add smooth scroll

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,8 @@
         <img
           src="./images/header/logo.png"
           alt="logo"
-          class="header__logo-img">
+          class="header__logo-img"
+        >
       </a>
 
       <img
