did the first to third points

--- a/src/index.html
+++ b/src/index.html
@@ -271,7 +271,7 @@
               action="#"
               name="subscription"
               id="subscription__form"
-              onsubmit="this.reset(); return reloaded;"
+              onsubmit="this.reset(); return false;"
             >
               <input
                 class="subscription__input"
