made the points from mentor

--- a/src/index.html
+++ b/src/index.html
@@ -334,39 +334,43 @@
 
           <div class="footer__contacts">
             <h4 class="footer__title">Контакти:</h4>
-            <p>
-              вул. М. Грушевського, 6; Київ, 01001
-              <br>тел. +38 (044) 278-13-57
-              <br>факс +38 (044) 278-74-54
-              <br>e-mail: info@namu.kiev.ua
-            </p>
+            <a
+              class="footer__contact-link"
+              href="https://www.google.com/maps/search/?api=1&query=вул.+М.+Грушевського,+6,+Київ,+01001"
+              target="_blank"
+            >вул. М. Грушевського, 6; Київ, 01001</a><br>
+            <a class="footer__contact-link" href="tel:+380442781357">
+              тел. +38 (044) 278-13-57
+            </a><br>
+            <a class="footer__contact-link" href="tel:+380442787454">
+              факс +38 (044) 278-74-54
+            </a><br>
+            <a class="footer__contact-link" href="mailto:info@namu.kiev.ua">
+              e-mail: info@namu.kiev.ua
+            </a>
           </div>
 
           <a class="footer__arrow" href="#header">
-            <img
-              class="footer__arrow__icon"
-              src="./images/footer-arrow.svg"
-              alt="Up arrow"
-            >
+            <img src="./images/footer-arrow.svg" alt="Up arrow">
           </a>
 
           <hr class="footer__line">
 
           <nav class="footer__nav">
-            <ul class="footer__nav__list">
-              <li class="footer__nav__item">
-                <a href="#gallery" class="footer__nav__link">Галерея</a>
+            <ul class="footer__nav-list">
+              <li class="footer__nav-item">
+                <a href="#gallery" class="footer__nav-link">Галерея</a>
               </li>
-              <li class="footer__nav__item">
-                <a href="#relevance" class="footer__nav__link">Виставки та події</a>
+              <li class="footer__nav-item">
+                <a href="#relevance" class="footer__nav-link">Виставки та події</a>
               </li>
             </ul>
-            <ul class="footer__nav__list">
-              <li class="footer__nav__item">
-                <a href="#subscription" class="footer__nav__link">Про Нас</a>
+            <ul class="footer__nav-list">
+              <li class="footer__nav-item">
+                <a href="#subscription" class="footer__nav-link">Про Нас</a>
               </li>
-              <li class="footer__nav__item">
-                <a href="#footer" class="footer__nav__link">Контакти</a>
+              <li class="footer__nav-item">
+                <a href="#footer" class="footer__nav-link">Контакти</a>
               </li>
             </ul>
           </nav>
